# jikanwari-app

./: Cargo.toml  README.md  rust-toolchain.toml
.sqlx/: query-0e886f97972026e5efffd7e02d93a2a6ed1e1d4fe754af6ccf83f188d040cf67.json  query-552f27ba1c6b9f875b5ac483d4e11b7296c8b79d8eae6c7dcd98f5b0193e8bc3.json  query-5b53bc846859473f29ff1af8a9cbaa41d0fb596d7c0e8059b209539f70785d72.json  query-85ff540f2109852ee51ac946e862e0d83288e59f175edf47dc5a70e77c0c5f39.json  query-8cd942447b230ef5113e7a600c9bea6e49da4fb38dc25d241fb136b5043ea00b.json  query-8efaa96097f4dbad8261dec89f0360d019ab5c6aa624082830df537e4a925bdf.json  query-9ddc40356547e054413f08c380daf85046da7856fdc4ca8696272831992810c3.json  query-b456b3be003869470c4e141cf96a744d74f2c74c88f083eb1ca79f26b7339afe.json  query-cd56d7aae7fabf8ec95c7704ede3ca5dcd442478fe9aefe438026b2d1ddb9815.json  query-d23f5bd9a94f60586f0daf3b65010550c9aa13876f09c9627b148722669f2580.json  query-f4ef207f41a8a9cd3f6fc4596e01068fc251beaf5d5110d6228d532d158b6d13.json  query-fd858fd1dc4374f9e4278472e92b648951f1c27114850968adb65107b3e5e291.json
authz/: Cargo.toml
authz/src/: group.rs  lib.rs  user.rs
authz/src/policies/: group.cedar  user.cedar
domain/: Cargo.toml
domain/src/: lib.rs
repository/: Cargo.toml  build.rs
repository/migrations/: 0001_init.down.sql  0001_init.up.sql
repository/queries/: create_group_core.sql  create_group_members.sql  create_user.sql  get_group.sql  get_group_members.sql  get_user.sql  list_groups.sql  list_users.sql  update_group.sql  update_group_members.0.sql  update_group_members.1.sql  update_user.sql
repository/src/: group.rs  lib.rs  user.rs
router/: Cargo.toml
router/src/: authn.rs  error.rs  group.rs  lib.rs  user.rs
service/: Cargo.toml
service/src/: group.rs  lib.rs  rbac.rs  user.rs
src/: config.rs  error.rs  main.rs  state.rs
