[workspace]
resolver = "3"
members = ["domain", "repository", "router", "service"]
default-members = ["./."]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0.23"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
headers = "0.4.1"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["normalize-path", "request-id", "sensitive-headers", "tokio", "tower", "trace", "util"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v7"] }

[package]
name = "jikanwari-app"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
http.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

domain.path = "domain"
repository.path = "repository"
router.path = "router"
service.path = "service"
