[package]
name = "repository"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true

authz.path = "../authz"
domain.path = "../domain"
service.path = "../service"
