[package]
name = "router"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
serde.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

domain.path = "../domain"
service.path = "../service"
